Changes made to accordion section to ensure alignment with wireframe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,16 +145,16 @@ h5 {
 }
 
 /*Accordion*/
-#services-accordion {
+#services-accordion { /* Change text color, custom class*/
     color: var(--highlight-color-light);
 }
-
+/*Change paragraph colour within accordion section of services using custom ID*/
 #services-accordion p {
     margin-bottom: 46px;
     color: var(--highlight-color);
 }
 
-.accordion-button {
+.accordion-button { /*Change the colour of accordion button when closed to align with colour scheme*/
     background-color: var(--highlight-color);
     color: var(--lowlight-color);
 }
@@ -164,9 +164,7 @@ h5 {
     color: var(--secondary-color);
 }
 
-.accordion-button .collapsed {
-    background-color: var(--highlight-color-light);
-}
+
 /*
 .card  {
     min-height: 72vh;
